# cse6230-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  chatgpt.c  cuda.cu  general_purpose.cpp  job-gpu  job-vec  sort.cpp  test.c  test_code  utils.h  utils.hpp
cuda/cuda_count/: cuda_count.cu
cuda/cuda_iscan/: cuda_iscan.cu
cuda/cuda_merge/: cuda_merge.cu
headers/: chatgpt.h  chatgpt.hpp
matmul/: matmul_cuda.cu  matmul_mpi.cpp  matmul_openmp  matmul_vec.cpp
matmul/chatgpt35/: matmul_cuda.cu  matmul_openmp.cpp
matmul/chatgpt4/: matmul_cuda.cu  matmul_mpi.cpp  matmul_openmp.cpp  matmul_vec.cpp
matmul/copilot/: matmul_cuda.cu  matmul_openmp.cpp  matmul_vec.cpp
matmul/gemini/: matmul_cuda.cu  matmul_mpi.cpp  matmul_openmp.cpp  matmul_vec.cpp
seb_files/: CMakeLists.txt  Makefile  general_purpose.cpp  slurm-570087.out
seb_files/cuda/cuda_copy/: cuda_copy.cu  slurm-591309.out  slurm-593851.out
seb_files/cuda/cuda_count/: cuda_count.cu  slurm-587152.out  slurm-591516.out
seb_files/cuda/cuda_find/: cuda_find.cu
seb_files/cuda/cuda_foreach/: cuda_foreach.cu  slurm-595030.out
seb_files/cuda/cuda_iscan/: cuda_iscan.cu  slurm-587191.out  slurm-591497.out  slurm-593867.out  slurm-595007.out
seb_files/cuda/cuda_merge/: cuda_merge.cu  slurm-586211.out  slurm-591509.out
seb_files/cuda/cuda_min/: cuda_min.cu  slurm-594983.out
seb_files/cuda/cuda_old/cuda_copy/: cuda_copy.cu
seb_files/cuda/cuda_old/cuda_count/: cuda_count.cu  slurm-593859.out
seb_files/cuda/cuda_old/cuda_find/: cuda_find.cu
seb_files/cuda/cuda_old/cuda_sort/cuda_merge/: cuda_merge.cu  slurm-593871.out
seb_files/cuda/cuda_select/: cuda_select.cu  slurm-595055.out
seb_files/cuda/cuda_sort/: cuda_sort.cu
seb_files/cuda/cuda_sum/: cuda_sum.cu  slurm-595040.out
seb_files/cuda/cuda_test/: cuda_test.cu
slurm/: job-gen  job-gpu  job-openmp
sorting/: sort.cpp
src/: chatgpt.cpp  cuda.cpp  general_purpose.cpp
std_algos/: CMakeLists.txt  copy  copy.cpp  count.cpp  equals.cpp  job-openmp  merge.cpp  reduce.cpp  search.cpp  sort  sort.cpp
